crates/reinhardt-pages/tests/ui/server_fnset/fail/duplicate_override.stderr
error[E0428]: the name `article_fns` is defined multiple times
  --> tests/ui/server_fnset/fail/duplicate_override.rs:13:1
   |
 7 | #[server_fnset(for = article_fns)]
   | ---------------------------------- previous definition of the module `article_fns` here
...
13 | #[server_fnset(for = article_fns)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `article_fns` redefined here
   |
   = note: `article_fns` must be defined only once in the type namespace of this module
   = note: this error originates in the macro `__reinhardt_generate_server_fnset_Actions` which comes from the expansion of the attribute macro `server_fnset` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `ServerFnSetActions<ArticleResource>` for type `Actions`
  --> tests/ui/server_fnset/fail/duplicate_override.rs:13:1
   |
 7 | #[server_fnset(for = article_fns)]
   | ---------------------------------- first implementation here
...
13 | #[server_fnset(for = article_fns)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Actions`
   |
   = note: this error originates in the macro `__reinhardt_generate_server_fnset_Actions` which comes from the expansion of the attribute macro `server_fnset` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0034]: multiple applicable items in scope
  --> tests/ui/server_fnset/fail/duplicate_override.rs:9:11
   |
 7 | #[server_fnset(for = article_fns)]
   | ---------------------------------- in this attribute macro expansion
 8 | impl Actions {
 9 |     async fn update(lookup: i64, input: UpdateArticle, #[inject] context: DetailActionContext<ArticleResource>) -> Result<ArticleDto...
   |              ^^^^^^ multiple `update` found
   |
note: candidate #1 is defined in an impl for the type `Actions`
  --> tests/ui/server_fnset/fail/duplicate_override.rs:9:2
   |
 9 |     async fn update(lookup: i64, input: UpdateArticle, #[inject] context: DetailActionContext<ArticleResource>) -> Result<ArticleDto, ServerFnSetError> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `Actions`
  --> tests/ui/server_fnset/fail/duplicate_override.rs:15:2
   |
15 |     async fn update(lookup: i64, input: UpdateArticle, #[inject] context: DetailActionContext<ArticleResource>) -> Result<ArticleDto, ServerFnSetError> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `__reinhardt_generate_server_fnset_Actions` which comes from the expansion of the attribute macro `server_fnset` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0034]: multiple applicable items in scope
  --> tests/ui/server_fnset/fail/duplicate_override.rs:15:11
   |
13 | #[server_fnset(for = article_fns)]
   | ---------------------------------- in this attribute macro expansion
14 | impl Actions {
15 |     async fn update(lookup: i64, input: UpdateArticle, #[inject] context: DetailActionContext<ArticleResource>) -> Result<ArticleDto...
   |              ^^^^^^ multiple `update` found
   |
note: candidate #1 is defined in an impl for the type `Actions`
  --> tests/ui/server_fnset/fail/duplicate_override.rs:9:2
   |
 9 |     async fn update(lookup: i64, input: UpdateArticle, #[inject] context: DetailActionContext<ArticleResource>) -> Result<ArticleDto, ServerFnSetError> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `Actions`
  --> tests/ui/server_fnset/fail/duplicate_override.rs:15:2
   |
15 |     async fn update(lookup: i64, input: UpdateArticle, #[inject] context: DetailActionContext<ArticleResource>) -> Result<ArticleDto, ServerFnSetError> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `__reinhardt_generate_server_fnset_Actions` which comes from the expansion of the attribute macro `server_fnset` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `update`
  --> tests/ui/server_fnset/fail/duplicate_override.rs:9:2
   |
 9 |     async fn update(lookup: i64, input: UpdateArticle, #[inject] context: DetailActionContext<ArticleResource>) -> Result<ArticleDto, ServerFnSetError> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `update`
...
15 |     async fn update(lookup: i64, input: UpdateArticle, #[inject] context: DetailActionContext<ArticleResource>) -> Result<ArticleDto, ServerFnSetError> {
   |     --------------------------------------------------------------------------------------------------------------------------------------------------- other definition for `update`
